Spring Boot - Исключения - В процессе выполнения.